# local-pubmed

./: .gitignore  README.md  docker-compose.yml  docker-run.sh  pyproject.toml
config/: pmc_index.json  pubmed_index.json  pubmed_query_cache_index.json
pubmeddb/: __init__.py  api.py  query.py
scripts/: import_pmc_oa_to_es.py  import_pubmed_to_es.py  init_query_cache_index.py  reimport_failed_pmids.py  search_pubmed.py
static/: app.js  help.html  index.html  styles.css
tests/: test_parse.py  test_query.py
