[project]
name = "pubmeddb"
version = "0.1.0"
description = "Local PubMed XML to Elasticsearch indexing tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=5.3.0",       # #1: 替代标准库 xml.etree，大文件解析速度提升 3-5x
    "orjson>=3.10.18",
    "uvicorn[standard]>=0.46.0",
]

# #2: 开发依赖分组，uv sync --group dev 安装
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
